refactor tui until cards phase